fix in the breadcrumbs alignment, add an override for breadcrumbs__link in custom.css

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -224,6 +224,10 @@ a:hover {
     margin:5px;
 }
 
+.breadcrumbs__link {
+    vertical-align: top;
+}
+
 h1 {
 	@apply font-bold;
 }
